slightly adjusted  media query for large monitors to fix alignment issue for img2 & img4

--- a/styles.css
+++ b/styles.css
@@ -1222,11 +1222,11 @@ position: absolute;
 @media (min-width: 1440px) {
     #img2 {
         bottom: 0;
-        height: 25%;
+        height: 30%;
     }
 
     #img4 {
         bottom: 0;
-        height: 25vh;
+        height: 30vh;
     }
 }
